// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UI Reducer Add to Team handles HIDE_ADD_TO_TEAM action 1`] = `
Object {
  "activeMenus": Object {
    "addToTeam": false,
    "board": false,
    "boardsExplorer": false,
    "create": false,
    "notifications": false,
    "renameBoard": false,
    "user": false,
    "visibility": false,
  },
  "error": Object {
    "header": "",
    "kind": "",
    "message": "",
  },
  "fetching": Object {
    "activity": false,
    "login": false,
    "signup": false,
  },
  "focus": "",
  "search": "",
}
`;

exports[`UI Reducer Add to Team handles SHOW_ADD_TO_TEAM action 1`] = `
Object {
  "activeMenus": Object {
    "addToTeam": true,
    "board": false,
    "boardsExplorer": false,
    "create": false,
    "notifications": false,
    "renameBoard": false,
    "user": false,
    "visibility": false,
  },
  "error": Object {
    "header": "",
    "kind": "",
    "message": "",
  },
  "fetching": Object {
    "activity": false,
    "login": false,
    "signup": false,
  },
  "focus": "",
  "search": "",
}
`;

exports[`UI Reducer Board Menu handles HIDE_BOARD_MENU action 1`] = `
Object {
  "activeMenus": Object {
    "addToTeam": false,
    "board": false,
    "boardsExplorer": false,
    "create": false,
    "notifications": false,
    "renameBoard": false,
    "user": false,
    "visibility": false,
  },
  "error": Object {
    "header": "",
    "kind": "",
    "message": "",
  },
  "fetching": Object {
    "activity": false,
    "login": false,
    "signup": false,
  },
  "focus": "",
  "search": "",
}
`;

exports[`UI Reducer Board Menu handles SHOW_BOARD_MENU action 1`] = `
Object {
  "activeMenus": Object {
    "addToTeam": false,
    "board": true,
    "boardsExplorer": false,
    "create": false,
    "notifications": false,
    "renameBoard": false,
    "user": false,
    "visibility": false,
  },
  "error": Object {
    "header": "",
    "kind": "",
    "message": "",
  },
  "fetching": Object {
    "activity": false,
    "login": false,
    "signup": false,
  },
  "focus": "",
  "search": "",
}
`;

exports[`UI Reducer Boards Explorer handles HIDE_BOARDS_EXPLORER action 1`] = `
Object {
  "activeMenus": Object {
    "addToTeam": false,
    "board": false,
    "boardsExplorer": false,
    "create": false,
    "notifications": false,
    "renameBoard": false,
    "user": false,
    "visibility": false,
  },
  "error": Object {
    "header": "",
    "kind": "",
    "message": "",
  },
  "fetching": Object {
    "activity": false,
    "login": false,
    "signup": false,
  },
  "focus": "",
  "search": "",
}
`;

exports[`UI Reducer Boards Explorer handles SHOW_BOARDS_EXPLORER action 1`] = `
Object {
  "activeMenus": Object {
    "addToTeam": false,
    "board": false,
    "boardsExplorer": true,
    "create": false,
    "notifications": false,
    "renameBoard": false,
    "user": false,
    "visibility": false,
  },
  "error": Object {
    "header": "",
    "kind": "",
    "message": "",
  },
  "fetching": Object {
    "activity": false,
    "login": false,
    "signup": false,
  },
  "focus": "",
  "search": "",
}
`;

exports[`UI Reducer Create Menu handles HIDE_CREATE_MENU action 1`] = `
Object {
  "activeMenus": Object {
    "addToTeam": false,
    "board": false,
    "boardsExplorer": false,
    "create": false,
    "notifications": false,
    "renameBoard": false,
    "user": false,
    "visibility": false,
  },
  "error": Object {
    "header": "",
    "kind": "",
    "message": "",
  },
  "fetching": Object {
    "activity": false,
    "login": false,
    "signup": false,
  },
  "focus": "",
  "search": "",
}
`;

exports[`UI Reducer Create Menu handles SHOW_CREATE_MENU action 1`] = `
Object {
  "activeMenus": Object {
    "addToTeam": false,
    "board": false,
    "boardsExplorer": false,
    "create": true,
    "notifications": false,
    "renameBoard": false,
    "user": false,
    "visibility": false,
  },
  "error": Object {
    "header": "",
    "kind": "",
    "message": "",
  },
  "fetching": Object {
    "activity": false,
    "login": false,
    "signup": false,
  },
  "focus": "",
  "search": "",
}
`;

exports[`UI Reducer Header Search handles BLUR_HEADER_SEARCH action 1`] = `
Object {
  "activeMenus": Object {
    "addToTeam": false,
    "board": false,
    "boardsExplorer": false,
    "create": false,
    "notifications": false,
    "renameBoard": false,
    "user": false,
    "visibility": false,
  },
  "error": Object {
    "header": "",
    "kind": "",
    "message": "",
  },
  "fetching": Object {
    "activity": false,
    "login": false,
    "signup": false,
  },
  "focus": "",
  "search": "",
}
`;

exports[`UI Reducer Header Search handles FOCUS_HEADER_SEARCH action 1`] = `
Object {
  "activeMenus": Object {
    "addToTeam": false,
    "board": false,
    "boardsExplorer": false,
    "create": false,
    "notifications": false,
    "renameBoard": false,
    "user": false,
    "visibility": false,
  },
  "error": Object {
    "header": "",
    "kind": "",
    "message": "",
  },
  "fetching": Object {
    "activity": false,
    "login": false,
    "signup": false,
  },
  "focus": "search",
  "search": "",
}
`;

exports[`UI Reducer Header Search handles SET_HEADER_SEARCH action 1`] = `
Object {
  "activeMenus": Object {
    "addToTeam": false,
    "board": false,
    "boardsExplorer": false,
    "create": false,
    "notifications": false,
    "renameBoard": false,
    "user": false,
    "visibility": false,
  },
  "error": Object {
    "header": "",
    "kind": "",
    "message": "",
  },
  "fetching": Object {
    "activity": false,
    "login": false,
    "signup": false,
  },
  "focus": "",
  "search": "something",
}
`;

exports[`UI Reducer Login User handles LOGIN_USER_FAILURE action 1`] = `
Object {
  "activeMenus": Object {
    "addToTeam": false,
    "board": false,
    "boardsExplorer": false,
    "create": false,
    "notifications": false,
    "renameBoard": false,
    "user": false,
    "visibility": false,
  },
  "error": Object {
    "header": "Something wrong!",
    "kind": "wrongCredentials",
    "message": "Incorrect email (username) or password.",
  },
  "fetching": Object {
    "activity": false,
    "login": false,
    "signup": false,
  },
  "focus": "",
  "isFetching": true,
  "search": "",
}
`;

exports[`UI Reducer Login User handles LOGIN_USER_REQUEST action 1`] = `
Object {
  "activeMenus": Object {
    "addToTeam": false,
    "board": false,
    "boardsExplorer": false,
    "create": false,
    "notifications": false,
    "renameBoard": false,
    "user": false,
    "visibility": false,
  },
  "error": Object {
    "header": "",
    "kind": "",
    "message": "",
  },
  "fetching": Object {
    "activity": false,
    "login": true,
    "signup": false,
  },
  "focus": "",
  "search": "",
}
`;

exports[`UI Reducer Login User handles LOGIN_USER_SUCCESS action 1`] = `
Object {
  "activeMenus": Object {
    "addToTeam": false,
    "board": false,
    "boardsExplorer": false,
    "create": false,
    "notifications": false,
    "renameBoard": false,
    "user": false,
    "visibility": false,
  },
  "error": Object {
    "header": "",
    "kind": "",
    "message": "",
  },
  "fetching": Object {
    "activity": false,
    "login": false,
    "signup": false,
  },
  "focus": "",
  "isFetching": true,
  "search": "",
}
`;

exports[`UI Reducer Logout User handles LOGOUT_USER action 1`] = `
Object {
  "activeMenus": Object {
    "addToTeam": false,
    "board": false,
    "boardsExplorer": false,
    "create": false,
    "notifications": false,
    "renameBoard": false,
    "user": false,
    "visibility": false,
  },
  "error": Object {
    "header": "",
    "kind": "",
    "message": "",
  },
  "fetching": Object {
    "activity": false,
    "login": false,
    "signup": false,
  },
  "focus": "",
  "search": "",
}
`;

exports[`UI Reducer Notifications handles HIDE_NOTIFICATIONS action 1`] = `
Object {
  "activeMenus": Object {
    "addToTeam": false,
    "board": false,
    "boardsExplorer": false,
    "create": false,
    "notifications": false,
    "renameBoard": false,
    "user": false,
    "visibility": false,
  },
  "error": Object {
    "header": "",
    "kind": "",
    "message": "",
  },
  "fetching": Object {
    "activity": false,
    "login": false,
    "signup": false,
  },
  "focus": "",
  "search": "",
}
`;

exports[`UI Reducer Notifications handles SHOW_NOTIFICATIONS action 1`] = `
Object {
  "activeMenus": Object {
    "addToTeam": false,
    "board": false,
    "boardsExplorer": false,
    "create": false,
    "notifications": true,
    "renameBoard": false,
    "user": false,
    "visibility": false,
  },
  "error": Object {
    "header": "",
    "kind": "",
    "message": "",
  },
  "fetching": Object {
    "activity": false,
    "login": false,
    "signup": false,
  },
  "focus": "",
  "search": "",
}
`;

exports[`UI Reducer Rename Board handles HIDE_RENAME_BOARD action 1`] = `
Object {
  "activeMenus": Object {
    "addToTeam": false,
    "board": false,
    "boardsExplorer": false,
    "create": false,
    "notifications": false,
    "renameBoard": false,
    "user": false,
    "visibility": false,
  },
  "error": Object {
    "header": "",
    "kind": "",
    "message": "",
  },
  "fetching": Object {
    "activity": false,
    "login": false,
    "signup": false,
  },
  "focus": "",
  "search": "",
}
`;

exports[`UI Reducer Rename Board handles SHOW_RENAME_BOARD action 1`] = `
Object {
  "activeMenus": Object {
    "addToTeam": false,
    "board": false,
    "boardsExplorer": false,
    "create": false,
    "notifications": false,
    "renameBoard": true,
    "user": false,
    "visibility": false,
  },
  "error": Object {
    "header": "",
    "kind": "",
    "message": "",
  },
  "fetching": Object {
    "activity": false,
    "login": false,
    "signup": false,
  },
  "focus": "",
  "search": "",
}
`;

exports[`UI Reducer Signup User handles SIGNUP_USER_FAILURE action 1`] = `
Object {
  "activeMenus": Object {
    "addToTeam": false,
    "board": false,
    "boardsExplorer": false,
    "create": false,
    "notifications": false,
    "renameBoard": false,
    "user": false,
    "visibility": false,
  },
  "error": Object {
    "header": "Unknown Server Error!",
    "kind": "serverError",
    "message": "Our server may be down. Please retry later!",
  },
  "fetching": Object {
    "activity": false,
    "login": false,
    "signup": false,
  },
  "focus": "",
  "search": "",
}
`;

exports[`UI Reducer Signup User handles SIGNUP_USER_REQUEST action 1`] = `
Object {
  "activeMenus": Object {
    "addToTeam": false,
    "board": false,
    "boardsExplorer": false,
    "create": false,
    "notifications": false,
    "renameBoard": false,
    "user": false,
    "visibility": false,
  },
  "error": Object {
    "header": "",
    "kind": "",
    "message": "",
  },
  "fetching": Object {
    "activity": false,
    "login": false,
    "signup": true,
  },
  "focus": "",
  "search": "",
}
`;

exports[`UI Reducer Signup User handles SIGNUP_USER_SUCCESS action 1`] = `
Object {
  "activeMenus": Object {
    "addToTeam": false,
    "board": false,
    "boardsExplorer": false,
    "create": false,
    "notifications": false,
    "renameBoard": false,
    "user": false,
    "visibility": false,
  },
  "error": Object {
    "header": "",
    "kind": "",
    "message": "",
  },
  "fetching": Object {
    "activity": false,
    "login": false,
    "signup": false,
  },
  "focus": "",
  "search": "",
}
`;

exports[`UI Reducer UI Errors RESET_UI_ERROR 1`] = `
Object {
  "activeMenus": Object {
    "addToTeam": false,
    "board": false,
    "boardsExplorer": false,
    "create": false,
    "notifications": false,
    "renameBoard": false,
    "user": false,
    "visibility": false,
  },
  "error": Object {
    "header": "",
    "kind": "",
    "message": "",
  },
  "fetching": Object {
    "activity": false,
    "login": false,
    "signup": false,
  },
  "focus": "",
  "search": "",
}
`;

exports[`UI Reducer UI Errors handles SET_UI_ERROR action 1`] = `
Object {
  "activeMenus": Object {
    "addToTeam": false,
    "board": false,
    "boardsExplorer": false,
    "create": false,
    "notifications": false,
    "renameBoard": false,
    "user": false,
    "visibility": false,
  },
  "error": Object {
    "header": "Verify email!",
    "kind": "invalidEmail",
    "message": "That doesn't look like an email address…",
  },
  "fetching": Object {
    "activity": false,
    "login": false,
    "signup": false,
  },
  "focus": "",
  "search": "",
}
`;

exports[`UI Reducer User Menu handles HIDE_USER_MENU action 1`] = `
Object {
  "activeMenus": Object {
    "addToTeam": false,
    "board": false,
    "boardsExplorer": false,
    "create": false,
    "notifications": false,
    "renameBoard": false,
    "user": false,
    "visibility": false,
  },
  "error": Object {
    "header": "",
    "kind": "",
    "message": "",
  },
  "fetching": Object {
    "activity": false,
    "login": false,
    "signup": false,
  },
  "focus": "",
  "search": "",
}
`;

exports[`UI Reducer User Menu handles SHOW_USER_MENU action 1`] = `
Object {
  "activeMenus": Object {
    "addToTeam": false,
    "board": false,
    "boardsExplorer": false,
    "create": false,
    "notifications": false,
    "renameBoard": false,
    "user": true,
    "visibility": false,
  },
  "error": Object {
    "header": "",
    "kind": "",
    "message": "",
  },
  "fetching": Object {
    "activity": false,
    "login": false,
    "signup": false,
  },
  "focus": "",
  "search": "",
}
`;

exports[`UI Reducer Visibility Menu handles HIDE_VISIBILITY_MENU action 1`] = `
Object {
  "activeMenus": Object {
    "addToTeam": false,
    "board": false,
    "boardsExplorer": false,
    "create": false,
    "notifications": false,
    "renameBoard": false,
    "user": false,
    "visibility": false,
  },
  "error": Object {
    "header": "",
    "kind": "",
    "message": "",
  },
  "fetching": Object {
    "activity": false,
    "login": false,
    "signup": false,
  },
  "focus": "",
  "search": "",
}
`;

exports[`UI Reducer Visibility Menu handles SHOW_VISIBILITY_MENU action 1`] = `
Object {
  "activeMenus": Object {
    "addToTeam": false,
    "board": false,
    "boardsExplorer": false,
    "create": false,
    "notifications": false,
    "renameBoard": false,
    "user": false,
    "visibility": true,
  },
  "error": Object {
    "header": "",
    "kind": "",
    "message": "",
  },
  "fetching": Object {
    "activity": false,
    "login": false,
    "signup": false,
  },
  "focus": "",
  "search": "",
}
`;
